@@ -1,3 +1,10 @@
+2010-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Ignore filename parameter if it contains directory traversal
+	directives.
+	* src/util.cc
+	* test/UtilTest.cc
+
 2010-03-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	urldecode -> percentDecode
